fix overflow mobile device

--- a/scss/Components/_loader.scss
+++ b/scss/Components/_loader.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.loader {
+  overflow-x: hidden;
+}
+
 @keyframes loadingAnimation {
   0% {
     width: 0px;
