--- a/scss/Layouts/_contact.scss
+++ b/scss/Layouts/_contact.scss
@@ -1,5 +1,4 @@
 .contact {
-  overflow-x: hidden;
   @extend %widthCenter;
   margin-bottom: 100px;
   &_title {
