--- a/scss/index.css
+++ b/scss/index.css
@@ -452,7 +452,6 @@ body {
   }
 }
 .resume {
-  overflow-x: visible;
   padding-top: 96px;
   background-color: #FFF;
 }
@@ -789,7 +788,6 @@ hr {
   }
 }
 .contact {
-  overflow-x: hidden;
   margin-bottom: 100px;
 }
 .contact_container {
@@ -987,6 +985,10 @@ hr {
           animation: loadingAnimation 2s linear infinite;
   -webkit-animation-direction: alternate;
           animation-direction: alternate;
+}
+
+.loader {
+  overflow-x: hidden;
 }
 
 @-webkit-keyframes loadingAnimation {
